--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 		"chai": "^3.5.0",
 		"chai-http": "^3.0.0",
 		"cors": "^2.8.1",
+		"dotenv": "^8.0.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
 		"mocha": "^6.2.0",
 		"mongodb": "^2.2.16",
+		"mongoose": "^5.6.9",
 		"nodemon": "^1.19.1",
 		"zombie": "^6.1.4"
 	},
