--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"mongodb": "^2.2.16",
 		"mongoose": "^5.6.9",
 		"nodemon": "^1.19.1",
+		"shortid": "^2.2.14",
 		"zombie": "^6.1.4"
 	},
 	"engines": {
