--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
 	"description": "boilerplate",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js"
+		"client-install": "npm install --prefix client",
+		"start": "nodemon server.js",
+		"server": "nodemon server.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
+		
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
 		"chai": "^3.5.0",
 		"chai-http": "^3.0.0",
+		"concurrently": "^4.1.2",
 		"cors": "^2.8.1",
 		"dotenv": "^8.0.0",
 		"express": "^4.14.0",
